@@ -281,7 +281,10 @@ class Monitor:
             # Bit rates need to be expressed in kilobytes
             for bit_rate in ['audio_bit_rate', 'video_bit_rate']:
                 if bit_rate in options:
-                    command += ['-%s %sk' % (OPTIONS[crop], options.pop(crop))]
+		  value = options.pop(bit_rate)
+		  if not (value.endswith("k")):
+		    value += "k"
+		  command += ['-%s %s' % (OPTIONS[bit_rate], value)]
 
             # Generate the rest of the command
             command += [ ['-' + OPTIONS[setting], value]
