@@ -2,6 +2,8 @@ Version 0.3.5~dev
 
 	* Fix stupid key error, closes: #2547
 	* Bit rates are now expressed in kbytes, closes: #2539
+	* Fix the undefined variable, refs: #2539.
+	* Prevent multiple "k" after the bit rates in the generated command, closes: #2539.
 
 Version 0.3.4 Released on 2009/10/28
 
